Add more criteria support
